# qaravan

./: .coverage  .coverage.31-24-7-107.spitfireuk.net.5012.XHDCCFQx  .gitignore  CLAUDE.md  DAY.md  FEATURES.md  Makefile  README.md  TESTING.md  TODO.md  pyproject.toml  release.sh  requirements.txt  run_tests.py  setup.py  ssh.exe.stackdump
.dev/: 4_data.pickle  4nn2.pickle  circuit.pkl  dev_collisional.ipynb  dev_resets.ipynb  dev_sampling.ipynb  dev_tn.ipynb  matchgates_list_n100.npz  matchgates_list_n100.pkl  mle_pec_demo.ipynb  rmps_dev.ipynb  samples_freq_dict_n100.pkl  subspace.ipynb  symbols.ipynb  tc_3_2_gs.pickle  test.pickle  test_circuits.ipynb  test_collisional.py  test_dmsim.ipynb  test_environments.ipynb  test_hamiltonians.ipynb  test_ipr.ipynb  test_lattice.ipynb  test_lattices.ipynb  test_matchgate_sim.ipynb  test_mps_sim.ipynb  test_noise.ipynb  test_resets.ipynb  test_resets.py  test_skeletons.ipynb  test_statevector_sim.ipynb  test_trajectory_sim.ipynb  torch_integration.ipynb
docs/: API_VISION.md
examples/: aklt_circuit_names.json  aklt_circuits.pickle  aklt_qiskit_circuits.qpy  checkpoint.pickle  circuits.ipynb  design.ipynb  gates.ipynb  gpu_acceleration.ipynb  ground_state_search.ipynb  plotting.py  state_prep_with_ad.ipynb  state_prep_with_envs.ipynb  task4_gates.ipynb  task5_circuits.ipynb  task6_observables.ipynb  tfi_noisy_sim.ipynb
notebooks/: 4nn.pickle  csl_dev.ipynb  mle_pec_demo.ipynb  pl_pec_demo.ipynb  test.pickle  test_circuits.ipynb  test_density_matrix_sim.ipynb  test_environments.ipynb  test_lattices.ipynb  test_mps_sim.ipynb  test_noise.ipynb  test_statevector_sim.ipynb  test_tn.ipynb  test_trajectory_sim.ipynb  torch_integration.ipynb  unit_tests.ipynb  vcp_4_data.pickle  vcp_demo.ipynb
proposals/: 2026-05-24-task1-uv-migration.md  2026-05-24-task2-directory-reorg.md  2026-05-24-task3-base.md  (+7 more)
(+105 files in other folders)
