[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qaravan"
version = "0.2.0"
description = "Unified classical simulation of noiseless and noisy quantum circuits"
authors = [{ name = "Faisal Alam", email = "faisal@phasecraft.io" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23,<2.0",
    "scipy>=1.10,<2.0",
    "sympy>=1.10",
    "matplotlib>=3.7,<4.0",
    "tqdm>=4.67.1",
    "ncon_torch>=0.3",
    "torch>=2.1",
    "stim>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "scienceplots",
    "ipykernel",
    "ipywidgets",
]

[tool.setuptools.packages.find]
where = ["src"]
